# Real_Time_Voice_Translator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REPORT.md  app.py  pyproject.toml
